--- a/src/index.html
+++ b/src/index.html
@@ -12,16 +12,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="partials/header.html" />
-    <load src="partials/hero.html" />
-    <load src="partials/advertisement.html" />
-    <load src="partials/about-us.html" />
-    <load src="partials/our-courses.html" />
-    <load src="partials/our-mentors.html" />
-    <load src="partials/sign-up.html" />
-    <load src="partials/reviews.html" />
-    <load src="partials/footer.html" />
-    <load src="partials/mobeli-menu.html" />
+    <load src="./partials/header.html" />
+    <load src="./partials/hero.html" />
+    <load src="./partials/advertisement.html" />
+    <load src="./partials/about-us.html" />
+    <load src="./partials/our-courses.html" />
+    <load src="./partials/our-mentors.html" />
+    <load src="./partials/sign-up.html" />
+    <load src="./partials/reviews.html" />
+    <load src="./partials/footer.html" />
+    <load src="./partials/mobeli-menu.html" />
     <script
       defer
       src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
